--- a/css/stylehome.css
+++ b/css/stylehome.css
@@ -8,56 +8,49 @@
 
   .grid-container {
     display: grid;
-    /* grid-template-columns: 350px 350px 350px 350px; */
-    /* margin-left: 4%; */
     grid-template-columns: auto auto auto;
     margin-right: 1px;
  
   }
   .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
     font-size: 30px;
     text-align: center;
     width: auto;
+    height: 100%;
   }
 
+  .grid-item span {
+    text-decoration: line-through;
+  }
 
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 60%;
-    border-radius: 5px;
-    border: 1px solid black;
-    margin-left: 24%;
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
   img {
-    border-radius: 5px 5px 0 0;
-    border: 1px solid black;
     width: 100%;
+    height: 100%;
+    filter: contrast(130%);
+   
   }
 
 img:hover{
   opacity: 0.5;
-  
-
 }
 
   .container {
     position: relative;
+    height: 100%;
   }
   
   .bottomleft {
     position: absolute;
-    bottom: 8px;
+    bottom: 15px;
     left: 16px;
-    font-size: 18px; 
+   
+    
+  }
+
+  .bottomleft p {
     color: white;
+    font-size: 25px;
+    text-align: left;
   }
   
   
@@ -71,7 +64,6 @@ img:hover{
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    /* background-color: #ed4306; */
     background-color:  rgba(249, 89, 31,0.5)
 
     
