--- a/css/styleRegister.css
+++ b/css/styleRegister.css
@@ -27,7 +27,7 @@
     text-align: center;
     background-image: url("../img/voiture3.jpg");
     background-repeat: no-repeat;
-    margin-left: -26%;
+    margin-left: -28%;
     background-size: cover;
     
   }
@@ -36,6 +36,7 @@
   form {
   padding: 20%;
   width: auto;
+  margin-top: -15%;
     
   }
   .login-content h2{
@@ -49,9 +50,10 @@
 	position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
-    margin: 25px 0;
+    margin: 30px 0;
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
+	
 }
 
 .login-content .input-div.one{
@@ -72,25 +74,6 @@ height: 45px;
 	transition: .3s;
 }
 
-
-
-.input-div:before{
-	right: 50%;
-}
-
-.input-div:after{
-	left: 50%;
-}
-
-.input-div.focus:before, .input-div.focus:after{
-	width: 50%;
-}
-
-
-
-
-
-
 .input-div > div > input{
 	position: absolute;
 	left: 0;
@@ -104,6 +87,7 @@ height: 45px;
 	font-size: 1.2rem;
 	color: #555;
 	font-family: 'poppins', sans-serif;
+	margin-bottom: 1%;
 }
 
 a{
